--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -22,7 +22,7 @@
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն|sc=Armn}}, {{t|hy|Չեխիա|sc=Armn}}
 * Azeri: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
 * Belarusian: {{t|be|Чэ́шская рэспу́бліка|f|sc=Cyrl}}, {{t|be|Чэ́хія|f|sc=Cyrl}}
-* Bengali: {{t|bn|চেক প্রজাতন্ত্র|sc=Beng}}
+* Bengali: {{t|bn|চেক প্রজাতন্ত্র|tr=cek prôjatôntrô|sc=Beng}}
 * Breton: {{t|br|Republik Tchek}}
 * Bulgarian: {{t|bg|Че́шка репу́блика|f|sc=Cyrl}}, {{t+|bg|Че́хия|f|sc=Cyrl}}
 * Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}, {{t|my|ခ္ယက္|sc=Mymr}}
