--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=jok3, jok6}}
+{{yue-hanzi|jyut=[[zok3]], [[zok6]]|y=jok3, jok6}}
 
 # {{defn|lang=yue|sort=日05}}
 
