--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -78,16 +78,21 @@
 ##* '''2001''', Ruella Frank, ''Body of Evidence'', p. 28:
 ##*: ‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
 ## {{context|colloquial|lang=en}} [[heterosexual|Heterosexual]].
-##* '''2007''', Layla Kumari, ''{{w|The Guardian}}'', 17 Sep 2007:
+##* {{quote-book|author=Laura Harris|author2=Elizabeth Crocker|title=Femme: Feminists, Lesbians, and Bad Girls|location=New York, N.Y.|publisher={{w|Routledge}}|year=1997|page=196|isbn=978-0-415-91874-9|passage=We only appear straight for the first five seconds. Just walking down the street, in the diner, or at the boardwalk, we hear, "Is she a man? Is she a woman? If she is a '''straight''' woman, what is she doing with this gay man?" We check in with each other. "What do you think, is it okay? I think we should go. I think we should cross over to the other side. Danger."}}
+##* {{quote-book|author=Helen Boyd|title=My Husband Betty: Love, Sex, and Life with a Crossdresser|location=New York, N.Y.|publisher=[[w:Perseus Books Group|Thunder's Mouth Press]]|year=2003|page=187|isbn=978-1-56025-515-4|passage=["]{{...}} He's a '''straight''' guy who does drag." At that, the man laughed. "Oh, you're putting me on!" He decided I must have been pulling his leg the whole time. He glanced back at my husband again. "So what's his number?" "The same as mine."}}
+##* '''2007''', Layla Kumari, ''{{w|The Guardian}}'', 17 September 2007:
 ##*: Some of my friends – gay and '''straight''' – seem unable to understand the close but platonic nature of my and Gian's relationship, but have been supportive.
 ##* '''2011''', Jodi Picoult, ''Sing You Home'', p. 273:
 ##*: Angela smiles. ‘I'm '''straight''', Zoe, and I'm happily married.’
+##* {{quote-book|author=Wheeler Winston Dixon|authorlink=Wheeler Winston Dixon|title=Straight: Constructions of Heterosexuality in the Cinema|location=Albany, N.Y.|publisher={{w|State University of New York Press}}|year=2012|page=1|isbn=978-0-7914-8733-4|passage=Every other mode of social discourse is "other," whether it be termed ''gay'' (or the newly acceptable ''queer''), ''bisexual'', or ''asexual'', or embodied in the concept of the ''spinster'', the ''confirmed bachelor'', the ''old maid'', or the ''same-sex couple'' who will never fit into the "'''straight'''" world, and doesn't or don't want to. The state of nonstraightness is essentially suspect; it is not seen as "right [or] correct."}}
+##* {{quote-book|author=Katie Price|authorlink=Katie Price|title=He's the One|location=|publisher=[[w:Random House|Century]]|year=2013|page=233|isbn=978-1-84605-959-9|passage=Why did he have to be '''straight'''? It's my tragedy. When we went camping with the school, we shared a tent. I was hoping for a ''{{w|Brokeback Mountain}}'' moment. I mean, I know he's straight, but there's always hope.}}
 ## {{context|colloquial|slang|pejorative|lang=en}} [[boring|Boring]], [[unimaginative]], [[mainstream]]. {{defdate|from 20th c.}}
 ##* {{w|Wavy Gravy}}
 ##*: ‘Sure, I could have done it different{{...}}put my clown in a closet and dressed up in '''straight''' clothing. I could have compromised my essence, and swallowed my soul.’
 ##* '''1989''', Gus Van Sant, ''Drugstore Cowboy''.
 ##*: ‘For all the boredom the '''straight''' life brings, it's not too bad.’
 ##: {{usex|My boyfriend is '''straight'''.|lang=en}}
+##* {{cite-book|author=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|page=|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean&nbsp;...?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street. {{...}} He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is. {{...}} He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
 
 ====Antonyms====
 * [[bent]]
