--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -72,7 +72,7 @@
 ## {{context|colloquial|lang=en}} [[conventional|Conventional]], socially acceptable. {{defdate|from 20th c.}}
 ##* '''1994''', {{w|Jarvis Cocker}}, ‘Do You Remember the First Time?’:
 ##*: You say you've got to go home. Well at least there's someone there that you can talk to. And you never have to face up to the night on your own. Jesus, it must be great to be '''straight'''.
-##* {{cite-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|page=|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean&nbsp;...?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street. {{...}} He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is. {{...}} He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
+##* {{quote-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|page=|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean&nbsp;...?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street. {{...}} He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is. {{...}} He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
 ## {{context|colloquial|slang|pejorative|lang=en}} [[boring|Boring]], [[mainstream]], [[unadventurous]], [[unimaginative]]. {{defdate|from 20th c.}}
 ##* {{w|Wavy Gravy}}:
 ##*: ‘Sure, I could have done it different{{...}}put my clown in a closet and dressed up in '''straight''' clothing. I could have compromised my essence, and swallowed my soul.’
