--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -324,6 +324,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Finnish: {{t+|fi|taistelu}}, {{t+|fi|tappelu}}
 * French: {{t+|fr|lutte|f}}, {{t+|fr|combat|m}}
 * German: {{t+|de|Kampf|m}}
+* Ancient Greek: {{t|grc|μάχη|f|tr=mákhē}}
 * Hebrew: {{t|he|קרב|m|tr=kráv}}, {{t|he|לחימה|f|tr=lekhimá}}, {{t|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
 * Hungarian: {{t+|hu|küzdelem}}
 * Icelandic: {{t|is|slagur|m}}, {{t+|is|bardagi|m}}
