--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -136,13 +136,13 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 
 ====Translations====
 {{trans-top|to move from further away to nearer to}}
-* Abkhaz: {{t|ab|аара|tr=aara|sc=Cyrl}}
+* Abkhaz: {{t|ab|аара}}
 * Afrikaans: {{t|af|kom}}
 * Albanian: {{t|sq|vij}}
 * Arabic: {{t|ar|جاء|tr=jāʾa}}, {{t|ar|حضر|tr=ḥáḍara}}, {{t+|ar|أتى|tr=ʾatā}}
 *: Egyptian Arabic: {{t|arz|جا|tr=gā|sc=Arab}}, {{t|arz|جه|tr=geh|sc=Arab}}
 *: Tunisian Arabic: {{t|aeb|جاء|tr=jāʾ|sc=Arab}}
-* Armenian: {{t+|hy|գալ|tr=gal|sc=Armn}}
+* Armenian: {{t+|hy|գալ}}
 * Aromanian: {{t|rup|vin}}, {{t|rup|yin}}
 * Assamese: {{t-needed|as}}
 * Asturian: {{t+|ast|venir}}
@@ -151,11 +151,11 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bakhtiari: {{t|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: {{t|eu|etorri}}
 * Bavarian: {{t|bar|kemma}}
-* Belarusian: {{t|be|прыходзіць|impf|tr=pryxódzicʹ|sc=Cyrl}}, {{t|be|прыйсці|pf|sc=Cyrl}}, {{t|be|прыязджаць|impf|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|pf|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
+* Belarusian: {{t|be|прыхо́дзіць|impf}}, {{t|be|прыйсці|pf|sc=Cyrl}}, {{t|be|прыязджа́ць|impf}}, {{t|be|прые́хаць|pf}} {{qualifier|by transport}}
 * Bengali: {{t|bn|আসা|tr=asha|sc=Beng}}
 * Brahui: {{t|brh|barr}}
-* Bulgarian: {{t+|bg|идвам|impf|tr=ídvam}}, {{t|bg|дойда|pf|tr=dójda}}
-* Burmese: {{t+|my|လာ|tr=la|sc=Mymr}}
+* Bulgarian: {{t+|bg|и́двам|impf}}, {{t|bg|до́йда|pf}}
+* Burmese: {{t+|my|လာ|sc=Mymr}}
 * Catalan: {{t+|ca|venir}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
@@ -171,9 +171,9 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * French: {{t+|fr|venir}}
 * Friulian: {{t|fur|vignî}}
 * Galician: {{t+|gl|vir}}
-* Georgian: {{t|ka|მისვლა|tr=misvla|sc=Geor}}, {{t|ka|ჩამოსვლა|tr=č’amosvla|sc=Geor}}
+* Georgian: {{t|ka|მისვლა|sc=Geor}}, {{t|ka|ჩამოსვლა|sc=Geor}}
 * German: {{t+|de|kommen}}
-* Greek: {{t+|el|έρχομαι|tr=érchomai}}
+* Greek: {{t+|el|έρχομαι}}
 * Hebrew: {{t+|he|בא|tr=ba}}
 * Hindi: {{t+|hi|आना|tr=ānā}}
 * Hungarian: {{t+|hu|jön}}
@@ -187,23 +187,23 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|来る|tr=[[くる]], kúru}}, {{t+|ja|いらっしゃる|tr=irassharu}} {{qualifier|honorific}}, {{t|ja|おいでになる|tr=o-ide-ni naru}} {{qualifier|honorific}}, {{t|ja|参る|tr=まいる, mairu}} {{qualifier|humble}}
 * Jèrriais: {{t|roa-jer|v'nîn}}
-* Kazakh: {{t+|kk|келу|tr=kelw|sc=Cyrl}}
+* Kazakh: {{t+|kk|келу}}
 * Khmer: {{t+|km|មក|tr=mɔɔk|sc=Khmr}}
 * Korean: {{t+|ko|오다|sc=Hang}}
 * Kurdish: {{t+|ku|hatin}}, {{t|ku|هاتن|sc=ku-Arab}}
-* Kyrgyz: {{t|ky|келүү|tr=kelüü|sc=Cyrl}}
-* Lao: {{t|lo|ມາ|tr=maa|sc=Laoo}}
+* Kyrgyz: {{t|ky|келүү}}
+* Lao: {{t|lo|ມາ|sc=Laoo}}
 * Latin: {{t+|la|venio}}
 * Latvian: {{t+|lv|nākt}}
 * Lithuanian: {{t+|lt|ateiti}}
 * Lojban: {{t+|jbo|klama}}
 {{trans-mid}}
-* Macedonian: {{t|mk|дојде|pf|tr=dójde|sc=Cyrl}}, {{t|mk|доаѓа|impf|tr=dóaǵa|sc=Cyrl}}
+* Macedonian: {{t|mk|дојде|pf}}, {{t|mk|доаѓа|impf}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|gie}}
 * Manchu: {{t|mnc|jimbi|sc=Mong}}
 * Maore Comorian: {{t|swb|ja|alt=uja}}
-* Mongolian: {{t|mn|ирэх|tr=ireh|sc=Cyrl}}
+* Mongolian: {{t|mn|ирэх}}
 * Neapolitan: {{t|nap|venì}}
 * North Frisian: {{t|frr|kaame}}
 * Norwegian: {{t+|no|komme}}
@@ -220,7 +220,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Rohingya: {{t|rhg|ai}}
 * Romanian: {{t|ro|veni}}
 * Romansch: {{t|rm|vegnir}}, {{t|rm|vagnir}}, {{t|rm|neir}}, {{t|rm|gnir}}
-* Russian: {{t+|ru|приходить|impf|tr=prixodítʹ}}, {{t+|ru|прийти|pf|tr=prijtí}}; {{t+|ru|приезжать|impf|tr=prijezžátʹ|sc=Cyrl}}, {{t+|ru|приехать|pf|tr=prijéxatʹ|sc=Cyrl}} {{qualifier|by transport}}
+* Russian: {{t+|ru|приходи́ть|impf}}, {{t+|ru|прийти́|pf}}; {{t+|ru|приезжа́ть|impf}}, {{t+|ru|прие́хать|pf}} {{qualifier|by transport}}
 * Sanskrit: {{t-needed|sa}}
 * Sardinian: {{t|sc|bènnere}}, {{t|sc|benni}}, {{t|sc|bènniri}}, {{t|sc|vènnere}}
 * Scots: {{t|sco|cum}}
@@ -229,7 +229,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 *: Cyrillic: {{t|sh|доћи|pf|sc=Cyrl}}
 *: Roman: {{t|sh|doći|pf}}
 * Sicilian: {{t+|scn|vèniri}}
-* Sinhalese: {{t|si|එනවා|tr=enavā|sc=Sinh}}
+* Sinhalese: {{t|si|එනවා|sc=Sinh}}
 * Slovak: {{t|sk|prichádzať|impf}}, {{t|sk|prísť|pf}}
 * Slovene: {{t+|sl|priti|pf}}
 * Sorbian:
@@ -237,17 +237,17 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Spanish: {{t+|es|venir}}
 * Swahili: {{t|sw|kuja}}
 * Swedish: {{t+|sv|komma}}
-* Tajik: {{t|tg|омадан|tr=omadan|sc=Cyrl}}
-* Tamil: {{t+|ta|வா|tr=vā}}
-* Tatar: {{t+|tt|килергә|tr=kilergä|sc=Cyrl}}
+* Tajik: {{t|tg|омадан}}
+* Tamil: {{t+|ta|வா}}
+* Tatar: {{t+|tt|килергә}}
 * Telugu: {{t-needed|te}}
 * Thai: {{t+|th|มา|tr=maa}}
-* Tibetan: {{t|bo|ཡོང|tr=yong|sc=Tibt}}, {{t|bo|ཕེབས|tr=phebs|sc=Tibt}} {{qualifier|honorific}}
+* Tibetan: {{t|bo|ཡོང|sc=Tibt}}, {{t|bo|ཕེབས|sc=Tibt}} {{qualifier|honorific}}
 * Tocharian A: {{t|xto|kum-}}, {{t|xto|käm-}}
 * Tocharian B: {{t|txb|käm-}}
 * Turkish: {{t+|tr|gelmek}}
 * Turkmen: {{t+|tk|gelmek}}
-* Ukrainian: {{t+|uk|приходити|impf|tr=pryxódyty|sc=Cyrl}}, {{t|uk|прийти|pf|tr=pryjtý|sc=Cyrl}}; {{t|uk|приїжджати|impf|tr=pryjiždžáty|sc=Cyrl}}, {{t|uk|приїхати|pf|tr=pryjíxaty|sc=Cyrl}} {{qualifier|by transport}}
+* Ukrainian: {{t+|uk|прихо́дити|impf}}, {{t|uk|прийти́|pf}}; {{t|uk|приїжджа́ти|impf}}, {{t|uk|приї́хати|pf}} {{qualifier|by transport}}
 * Urdu: {{t+|ur|آنا|tr=ānā}}
 * Uzbek: {{t+|uz|kelmoq}}
 * Venetian: {{t|vec|vegner}}
@@ -270,7 +270,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Galician: {{t+|gl|vir}}
 * German: {{t+|de|kommen}}, {{t+|de|ankommen}}
 * Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
-* Macedonian: {{t|mk|доаѓа|tr=dóaǵa|sc=Cyrl}}, {{t|mk|пристига|tr=prístiga|sc=Cyrl}}
+* Macedonian: {{t|mk|доаѓа}}, {{t|mk|пристига}}
 {{trans-mid}}
 * Norwegian: {{t|no|ankomme}}, {{t+|no|komme}}
 * Persian: {{t+|fa|رسیدن|tr=ra(e)sidan|sc=fa-Arab}}
@@ -293,7 +293,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 {{trans-bottom}}
 
 {{trans-top|to orgasm}}
-* Bulgarian: {{t+|bg|свършвам|tr=svǎ̀ršvam}}
+* Bulgarian: {{t+|bg|свъ́ршвам}}
 * Catalan: {{t|ca|escórrer-se}}
 * Chinese:
 *: Mandarin: {{t+|cmn|射|tr=shè|sc=Hani}}, {{t+|cmn|射精|tr=shèjīng|sc=Hani}}, {{qualifier|slang}} {{t+|cmn|出水|tr=chūshuǐ|sc=Hani}}
@@ -303,17 +303,17 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Finnish: {{t+|fi|tulla}}, {{t|fi|saada orgasmi}}, {{t|fi|laueta}}
 * French: {{t+|fr|jouir}}, {{t+|fr|venir}}
 * German: {{t+|de|kommen}}
-* Greek: {{t+|el|χύνω|tr=hino, heeno|sc=Grek}} {{qualifier|slang}}
+* Greek: {{t+|el|χύνω}} {{qualifier|slang}}
 {{trans-mid}}
 * Hungarian: {{t|hu|elélvez}}
 * Icelandic: {{t|is|fá það}}
 * Italian: {{t+|it|venire}}
 * Japanese: {{t+|ja|いく|tr=iku}}
-* Macedonian: {{t|mk|свршува|tr=sv'ršuva|sc=Cyrl}}
+* Macedonian: {{t|mk|свршува}}
 * Norwegian: {{t+|no|komme}}
 * Polish: {{t+|pl|dochodzić|impf}}, {{t+|pl|dojść|pf}}
 * Portuguese: {{t+|pt|gozar}}
-* Russian: {{t+|ru|кончать|impf|tr=končátʹ}}, {{t+|ru|кончить|pf|tr=kónčitʹ}}
+* Russian: {{t+|ru|конча́ть|impf}}, {{t+|ru|ко́нчить|pf}}
 * Serbo-Croatian: {{t|sh|svršiti}} {{qualifier|colloquial}}
 * Spanish: {{t+|es|correrse}}, {{t+|es|venirse}}
 * Thai: {{t|th|ถึงจุดสุดยอด|sc=Thai|tr=těung jùt sùt yôt}}, {{t+|th|เสร็จ|sc=Thai|tr=sèt}}
@@ -325,15 +325,15 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * French: {{t+|fr|devenir}}
 * Hungarian: {{t+|hu|válik}}
 {{trans-mid}}
-* Macedonian: {{t|mk|станува|tr=stánuva|sc=Cyrl}}
-* Russian: {{t+|ru|становиться|impf|tr=stanovítʹsja|sc=Cyrl}}, {{t+|ru|стать|pf|tr=statʹ|sc=Cyrl}}
+* Macedonian: {{t|mk|станува}}
+* Russian: {{t+|ru|станови́ться|impf}}, {{t+|ru|стать|pf}}
 * Vietnamese: {{t+|vi|thành}}, {{t+|vi|trở nên}}, {{t+|vi|trở thành}}
 * Zulu: {{t|zu|ba|alt=-ba}}
 {{trans-bottom}}
 
 {{trans-top|to turn out to be}}
 * Hungarian: {{t|hu|bizonyul}}
-* Russian: {{t+|ru|оказываться|impf|tr=okázyvatʹsja|sc=Cyrl}}, {{t+|ru|оказываться|pf|tr=okazátʹsja|sc=Cyrl}}
+* Russian: {{t+|ru|ока́зываться|impf}}, {{t+|ru|оказа́ться|pf}}
 {{trans-mid}}
 {{trans-bottom}}
 
