--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -37,6 +37,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}
 ====Translations====
 {{trans-top|and so on}}
 * Arabic: {{t|ar|وهَلُمَّ جَرًّا|tr=wa-halumma jaraa|sc=Arab}}, {{t|ar|إلخ|tr='ilakh|sc=Arab}}, {{t|ar|إلى آخره|tr='íla 'aakhirih|sc=Arab}}
+* Armenian: {{t|hy|եւ այլն|sc=Armn}}
 * Asturian: {{t|ast|etcétera}}
 * Bengali: {{t+|bn|ইত্যাদি|tr=ittêdi|sc=Beng}}
 * Bulgarian: {{t|bg|и така нататък}}, {{t|bg|и т.н.}}
