--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -31,12 +31,14 @@
 * Aromanian: {{t|rup|broascã|f}}, {{t|rup|broascã tsãstoasã|f}}
 * Asturian: {{t|ast|tortuga|f}}
 * Azeri: {{qualifier|tortoise or turtle}} {{t+|az|tısbağa}}
+* Bau Bidayuh: {{t|sne|diya}}
 * Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
 * Bengali: {{qualifier|tortoise or turtle}} {{t|bn|কাছিম|tr=kachim|sc=Beng}}
 * Breton: {{t+|br|baot|f}}, {{t|br|baoted|p}}, {{t|br|baot douar}}
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
 * Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|tr=leik|sc=Mymr}}
 * Catalan: {{t+|ca|tortuga|f}}
+* Central Melanau: {{t|mel|kejaa}}
 * Chinese:
 *: Mandarin: {{qualifier|tortoise or turtle}} {{t+|cmn|龜|sc=Hani}}, {{t+|cmn|龟|tr=guī|sc=Hani}}, {{t|cmn|烏龜|sc=Hani}}, {{t+|cmn|乌龟|tr=wūguī|sc=Hani}}, {{t+|cmn|王八|tr=wángba|sc=Hani}}, {{t|cmn|草龜|sc=Hani}}, {{t|cmn|草龟|tr=cǎoguī|sc=Hani}}
 * Czech: {{t+|cs|želva}}
@@ -65,6 +67,7 @@
 * Kannada: {{t+|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
 * Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|tr=tasbaqa|sc=Cyrl}}
 * Khmer: {{t+|km|អណ្ដើក|tr=ɑndaək|sc=Khmr}}
+* Kimaragang: {{t|kqr|landang}}
 * Korean: {{qualifier|tortoise or turtle}} {{t+|ko|거북|sc=Kore}}, {{t+|ko|거북이|sc=Kore}}
 * Kyrgyz: {{qualifier|tortoise or turtle}} {{t|ky|ташбака|tr=tašbaka|sc=Cyrl}}
 {{trans-mid}}
@@ -97,6 +100,7 @@
 * Spanish: {{qualifier|tortoise or turtle}} {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe}}
 * Swedish: {{t+|sv|sköldpadda}}
+* Tagal Murut: {{t|mvv|buu}}, {{t|mvv|babag}}
 * Tajik: {{qualifier|tortoise or turtle}} {{t|tg|сангпушт|tr=sangpušt|sc=Cyrl}}
 * Tamil: {{t+|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}, {{t+|ta|ஆமை|tr=āmai|sc=Taml}}
 * Telugu: {{qualifier|tortoise or turtle}} {{t+|te|తాబేలు|tr=tābēlu|sc=Telu}}
@@ -111,6 +115,7 @@
 * Uzbek: {{qualifier|tortoise or turtle}} {{t+|uz|toshbaqa}}
 * Vietnamese: {{qualifier|tortoise or turtle}} {{t+|vi|rùa}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|tortug}}, {{qualifier|♂}} {{t|vo|hitortug}}, {{qualifier|♀}} {{t|vo|jitortug}}, {{qualifier|♂♀ offspring}} {{t|vo|tortugül}}, {{qualifier|♂ offspring}} {{t|vo|hitortugül}}, {{qualifier|♀ offspring}} {{t|vo|jitortugül}}
+* West Coast Bajau: {{t|bdr|kekuro}}
 * West Frisian: {{t|fy|skyldpod}}
 * Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=tsherepakhe|sc=Hebr}}
 {{trans-bottom}}
