--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -283,7 +283,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
-[[Category:English simple past forms]]
+[[Category:English verb simple past forms]]
 [[Category:English verb forms using redundant wikisyntax]]
 [[Category:English verbs with base form identical to past participle]]
 
