--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -754,7 +754,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
-[[Category:English simple past forms]]
+[[Category:English verb simple past forms]]
 [[Category:English verb forms using redundant wikisyntax]]
 [[Category:English verbs with base form identical to past participle]]
 [[Category:en:Meats]]
