--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日一卜一 (AMYM)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=AMYM|ids=⿱[[日]][[正]]}}
 
 # (variant of [[是]]) to [[be]], [[is]], [[am]], [[are]]
 # [[summer]]
