--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -141,7 +141,7 @@
 ====Translations====
 {{trans-top|not crooked or bent}}
 * Albanian: {{t|sq|drejtë}}
-* Arabic: {{t|ar|مستفيم|sc=Arab}}
+* Arabic: {{t|ar|مُسْتَفِيم|sc=Arab}}
 * Armenian: {{t+|hy|ուղիղ|tr=uġiġ}}
 * Aromanian: {{t|rup|ãndreptu}}
 * Asturian: {{t|ast|derechu}}
