--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -145,9 +145,10 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * French: {{t+|fr|Israël|m}}
 * Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'el}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
-{{trans-mid}}
 * Maore Comorian: {{t|swb|Israila}}
+{{trans-mid}}
 * Romanian: {{t+|ro|Israel|m}}
+* Russian: {{t+|ru|Изра́иль|m|sc=Cyrl}}, {{t+|ru|Израи́л|m|sc=Cyrl}}, {{t|ru|Исраэ́ль|m|sc=Cyrl}}
 * Spanish: {{t+|es|Israel|m}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
